--- a/src/SMART.Gui/Smart.Gui.csproj
+++ b/src/SMART.Gui/Smart.Gui.csproj
@@ -114,8 +114,20 @@
       <HintPath>..\..\packages\Prism.4.1.0.0\lib\NET40\Microsoft.Practices.Prism.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="PixelLab.Common, Version=6.0.2.0, Culture=neutral, processorArchitecture=MSIL">
@@ -629,11 +641,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\TestcaseExecution\ExecutionModelView.xaml">
+    <Page Include="View\ProjectExplorer\TestcaseExecution\ExecutionModelView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\TestcaseExecution\TestcaseExecutionCompositeView.xaml">
+    <Page Include="View\ProjectExplorer\TestcaseExecution\TestcaseExecutionCompositeView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -938,10 +950,10 @@
       <DependentUpon>TestcaseConfigurationCompositeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\ConfigSettingViewModel.cs" />
-    <Compile Include="View\TestcaseExecution\ExecutionModelView.xaml.cs">
+    <Compile Include="View\ProjectExplorer\TestcaseExecution\ExecutionModelView.xaml.cs">
       <DependentUpon>ExecutionModelView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\TestcaseExecution\TestcaseExecutionCompositeView.xaml.cs">
+    <Compile Include="View\ProjectExplorer\TestcaseExecution\TestcaseExecutionCompositeView.xaml.cs">
       <DependentUpon>TestcaseExecutionCompositeView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\TitleBarView.xaml.cs">
